--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - db
+      - redis
     env_file: ".env"
     environment:
       - PORT=${PORT}
@@ -31,5 +32,20 @@ services:
        - DB_NAME=${DB_NAME}
     ports:
      - "5432:5432"
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/root/redis
+      - redis_config:/usr/local/etc/redis/redis.conf
+    environment:
+      - REDIS_ADDRESS=&{REDIS_ADDRESS}
+      - REDIS_PASSWORD=&{REDIS_PASSWORD}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_DATABASES=${REDIS_DATABASES}
 volumes:
   dbdata:
+  redis_data:
+  redis_config:
