--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     restart: always
     ports:
       - "6379:6379"
+    command: [redis-server, /usr/local/etc/redis/redis.conf]
     volumes:
       - redis_data:/root/redis
       - redis_config:/usr/local/etc/redis/redis.conf
